[project]
name = "ai-image-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.5.0",
    "einops>=0.8.2",
    "modal>=1.3.2",
    "pytorch-ignite>=0.5.3",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "wandb>=0.25.0",
]
